--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
 body{
     background-color: rgb(133, 139, 173);
 }
+nav{
+    background-color: indigo;
+    padding: 15px 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+}
