--- a/style.css
+++ b/style.css
@@ -7,5 +7,7 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    
+}
+nav .logo{
+    text-decoration: none;
 }
